2008-12-02  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher.h
	* src/launcher/hd-launcher.c	
        * src/launcher/hd-launcher-page.c:
	Modified task launcher transition to fade the 'back' arrow in and out

2008-12-02  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Increased tile clicking threshold to make it easier to launch
	applications.

	* src/launcher/hd-launcher-tile.c (hd_launcher_tile_button_release):

2008-12-02  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher.c:
	Now load a blank window image if no other window is chosen. Because
	we can't be sure of apps also made a click on the fake window 
	remove it silently.

	* data/blank-window.png
	* data/Makefile.am:
	Added a blank window image to show the transition with if there wasn't
	one defined in the .desktop file with X-App-Loading-Image

2008-12-02  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher-page.h : 
        Added function to return the scroll amount of the page

	* src/launcher/hd-launcher.h
	* src/launcher/hd-launcher-app.c
	* src/launcher/hd-launcher-app.h
	* src/launcher/hd-launcher.c:
	Added application launcher transition

	* src/mb/hd-app.c: 
	Added call to remove application start transition when an 
	application window is shown.

2008-12-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c: hd_comp_mgr_map_notify():
	  Replace 3+ subsequent stackable windows correctly in the switcher.

2008-12-02  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-switcher.c (hd_switcher_menu_clicked): Move the call to
	ungrab the pointer to hildon-home. So the desktop does not freeze if
	hildon-home is not running.

2008-12-02  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-switcher.c (hd_switcher_show_menu_button): Hide status
	  area. Set the size of the menu button to the size of switcher and
	  staus area.